--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
